--- a/src/index.html
+++ b/src/index.html
@@ -1,35 +1,57 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="./assets/img/4geeks.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Carta Aleatoria</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"/>
+  <style>
+    body {
+      background-color: green;
+      height: 100vh;
+    }
+    .playing-card {
+      width: 200px;
+      height: 300px;
+      background-color: white;
+      border-radius: 1rem;
+      box-shadow: 0 8px 16px rgba(0,0,0,0.3);
+      font-family: 'Georgia', serif;
+      position: relative;
+    }
+    .card-corner {
+      position: absolute;
+      font-size: 2rem;
+    }
+    .top-left {
+      top: 10px;
+      left: 15px;
+    }
+    .bottom-right {
+      bottom: 10px;
+      right: 15px;
+      transform: rotate(180deg);
+    }
+    .card-center {
+      font-size: 5rem;
+      text-align: center;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  </style>
+</head>
+<body class="d-flex justify-content-center align-items-center">
+  <div class="playing-card" id="card">
+    <div class="card-corner top-left" id="top-suit">♥</div>
+    <div class="card-center" id="card-value">A</div>
+    <div class="card-corner bottom-right" id="bottom-suit">♥</div>
+  </div>
+  <div>
+    <button ></button>
+  </div>
 
-    <!-- Fontawesome is our recomended library for icons -->
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-      integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <!-- Write your HTML code here, you can delete everything withing the body tags -->
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./assets/img/rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
-      </div>
-    </div>
-
-    <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
-    <script type="module" src="/app.js"></script>
-  </body>
+  <script src="app.js"></script>
+</body>
 </html>
